# micrograd-cpp

./: CMakeLists.txt  readme.md
include/micrograd/: Value.hpp
src/: Value.cpp  main.cpp
